--- a/_config.yml
+++ b/_config.yml
@@ -86,10 +86,10 @@ author:
   location         : "Dhaka, Bangladesh"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=JoLJE7AAAAAJ&hl=en"
+  googlescholar    : #"https://scholar.google.com/citations?user=JoLJE7AAAAAJ&hl=en"
   DBLP             : 
-  email            :  pwg7jb@virginia.edu
-  researchgate     :  "https://www.researchgate.net/profile/Tonmoy_Hossain2"
+  email            :  #pwg7jb@virginia.edu
+  researchgate     :  #"https://www.researchgate.net/profile/Tonmoy_Hossain2"
   uri              :
   bitbucket        :
   codepen          :
@@ -104,7 +104,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/tonmoy-hossain-dihan"
-  orcid            : "https://orcid.org/0000-0002-5808-6391"
+  orcid            : #"https://orcid.org/0000-0002-5808-6391"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
