sixth Please enter the commit message for your changes. Lines starting

--- a/_config.yml
+++ b/_config.yml
@@ -97,13 +97,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "tonmoy-hossain"
+  github           : #"tonmoy-hossain"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/tonmoy-hossain-dihan"
+  linkedin         : #"https://www.linkedin.com/in/tonmoy-hossain-dihan"
   orcid            : #"https://orcid.org/0000-0002-5808-6391"
   pinterest        :
   soundcloud       :
