--- a/_config.yml
+++ b/_config.yml
@@ -86,10 +86,10 @@ author:
   location         : "Dhaka, Bangladesh"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : #"https://scholar.google.com/citations?user=JoLJE7AAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?user=5O9QMxUAAAAJ&hl=en"
   DBLP             : 
-  email            :  #pwg7jb@virginia.edu
-  researchgate     :  #"https://www.researchgate.net/profile/Tonmoy_Hossain2"
+  email            :  asifurrahim.cse@diu.edu.bd
+  researchgate     : "https://www.researchgate.net/profile/Mohammad-Rahim-7"
   uri              :
   bitbucket        :
   codepen          :
@@ -97,13 +97,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : #"tonmoy-hossain"
+  github           : "https://github.com/Annoy180104109"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : #"https://www.linkedin.com/in/tonmoy-hossain-dihan"
+  linkedin         : "https://www.linkedin.com/in/mohammad-asifur-30b7331a1/"
   orcid            : #"https://orcid.org/0000-0002-5808-6391"
   pinterest        :
   soundcloud       :
