--- a/_config.yml
+++ b/_config.yml
@@ -97,13 +97,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/Annoy180104109"
+  github           : "Annoy180104109"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/mohammad-asifur-30b7331a1/"
+  linkedin         : "https://www.linkedin.com/in/mohammad-asifur-30b7331a1"
   orcid            : #"https://orcid.org/0000-0002-5808-6391"
   pinterest        :
   soundcloud       :
