--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/mohammad-asifur-30b7331a1"
+  linkedin         : "mohammad-asifur-30b7331a1"
   orcid            : #"https://orcid.org/0000-0002-5808-6391"
   pinterest        :
   soundcloud       :
