--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ireen Ara Haque"
-  avatar           : "self_pic.jpg"
+  avatar           : "self_pic.JPG"
   bio              : ""
   location         : "Dhaka, Bangladesh"
   employer         :
