--- a/_config.yml
+++ b/_config.yml
@@ -86,9 +86,9 @@ author:
   location         : "Dhaka, Bangladesh"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?user=5O9QMxUAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=NJeAzDcAAAAJ"
   DBLP             : 
-  email            :  asifurrahim.cse@diu.edu.bd
+  email            :  ireen0114@student.nstu.edu.bd
   researchgate     : "https://www.researchgate.net/profile/Mohammad-Rahim-7"
   uri              :
   bitbucket        :
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "Annoy180104109"
+  github           : "Ireen-46"
   google_plus      :
   keybase          :
   instagram        :
