--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=NJeAzDcAAAAJ"
   DBLP             : 
   email            :  ireen0114@student.nstu.edu.bd
-  researchgate     : "https://www.researchgate.net/profile/Mohammad-Rahim-7"
+  researchgate     : 
   uri              :
   bitbucket        :
   codepen          :
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "mohammad-asifur-30b7331a1"
+  linkedin         : "https://www.linkedin.com/in/ireen-ara-haque-638625316/"
   orcid            : #"https://orcid.org/0000-0002-5808-6391"
   pinterest        :
   soundcloud       :
